# coding-challenges

01-Starfield simulation/: Makefile  main.c
02-Menger sponge/: Makefile  main.c
03-Snake/: Makefile  main.c
03-Snake/src/: main.cpp  snake.cpp  snake.h
04-Purple Rain/: main.c
05-Space Invaders/: Makefile
05-Space Invaders/src/: bullet.cpp  bullet.h  main.cpp  sprite.cpp  sprite.h
06-Mitosis/: Makefile
06-Mitosis/src/: main.c
OpenGLTutorial/: OpenGLTutorial.sln
OpenGLTutorial/OpenGLSetup/: CMakeLists.txt  Makefile  OpenGLSetup.vcxproj  glad.c  main.cpp
OpenGLTutorial/OpenGLSetup/dependencies/include/glad/: glad.h
OpenGLTutorial/OpenGLSetup/src/: config.h  glad.c  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
OpenGLTutorial/OpenGLSetup/src/shaders/: fragment.txt  vertex.txt
OpenGLTutorial/OpenGLSetup/x64/Debug/: OpenGLSetup.exe.recipe  OpenGLSetup.ilk  vc143.idb
OpenGLTutorial/OpenGLSetup/x64/Debug/OpenGLSetup.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLSetup.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OpenGLTutorial/hexagon/: CMakeLists.txt
OpenGLTutorial/hexagon/dependencies/include/: triangle.h  utils.h
OpenGLTutorial/hexagon/src/: main.c  main.cpp  triangle.cpp  utils.c  utils.cpp
OpenGLTutorial/hexagon/src/shaders/: fragment.glsl  vertex.glsl
