cmake_minimum_required(VERSION 3.10)
project(hello_window VERSION 1.0.0)

add_executable(hello_window src/config.h src/main.cpp)

target_include_directories(hello_window PRIVATE dependencies/include)

set(GLFW_LIB_DIR "${CMAKE_CURRENT_DIR}/dependencies/lib")
link_directories(GLFW_LIB_DIR)
target_link_libraries(hello_window glfw3)